# reverse-image-search

./: .gitignore  README.md  config.json  launch.py  pyproject.toml  requirements.txt
reverse_image_search/: .gitignore  .sourcery.yaml  __init__.py  app.py  gui.py  launch.py  model.py  ris-notebook.ipynb  utils.py
tests/: conftest.py  test_config.py  test_embed_model.py  test_embedding_store.py
v2/: __init__.py  app.py  basevectordb.py  cli.py  common.py  config.py  embed_model.py  embedding_store.py  hehe.ipynb  utils.py  vec.py
