[tool.poetry]
name = "reverse-image-search"
version = "0.1.3"
description = "Searches for similar images"
authors = ["tikendraw <tikendraksahu1029@gmail.com>"]
readme = "README.md"
packages = [
    { include = "reverse_image_search" },
    { include = "v2" },
]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
chromadb = "^0.5.12"
streamlit = "^1.39.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
image_search = 'launch:launch'
