[tool.poetry]
name = "reverse-image-search"
version = "0.1.6"
description = "Searches for similar images locally"
authors = ["tikendraw <tikendraksahu1029@gmail.com>"]
readme = "README.md"
packages = [
    { include = "reverse_image_search" },
    { include = "v2" },
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
chromadb = "^0.5.12"
streamlit = "^1.39.0"
click = "^8.1.7"
chafa-py = "^1.2.0"
pyperclip = "^1.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
image_search = 'launch:launch'
image_search_cli = 'v2.cli:cli_func'